<resources>
    <string name="sign_up">Welcome!</string>
    <string name="txt_username">Username</string>
    <string name="hint_username"><font size="15">Type your username</font></string>
    <string name="hint_password"><font size="15">Type your password</font></string>
    <string name="txt_password">Password</string>
    <string name="btn_login">SIGN IN</string>
    <string name="txt_to_signup"></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="another_signin">Or Sign Up Using</string>
</resources>