<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/layout_form_sign"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_welcome"
        android:layout_marginTop="40dp">
        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_username"
            android:drawableLeft="@drawable/baseline_person_2_24"
            android:ems="10"
            android:hint="@string/hint_username"/>
        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsername"
            android:layout_marginTop="10dp"
            android:text="@string/txt_password"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_password"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:ems="10"
            android:hint="@string/hint_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_password"
            android:textStyle="bold"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_signin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_form_sign"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_login"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_another_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signin"
        android:layout_marginTop="60dp"
        android:text="@string/another_signin"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/layout_sosmed"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_another_signup"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/facebook"
            android:layout_marginStart="10dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/google"
            android:layout_marginStart="10dp"
            android:src="@drawable/twitter" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txt_another_signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_sosmed"
        android:layout_marginTop="100dp"
        android:text="@string/another_signin"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_another_signup2"
        android:layout_marginTop="10dp"
        android:text="SIGN UP"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
</RelativeLayout>